# harness

./: .gitmodules  CMakeLists.txt  capture.h  main.cpp  window.h
cmake/: AddMultiTargetComponent.cmake
cmake/toolchains/: rpi.cmake
common/: err.h  msg.h  serial.h
host/: CMakeLists.txt  async_capture.h  capture.h  keys.h  main.cpp  window.h
image/: .dockerignore  CMakeLists.txt  Dockerfile  base.pkr.hcl  cmdline.txt  fstab  image.pkr.hcl  mouse.xml
image/overlay/boot/: config.txt
image/overlay/etc/: modules  rc.local
pi/: CMakeLists.txt  echo.cpp  main.cpp
